Removed services, simplified code, dark theme

--- a/Pages/Shared/_Camera.cshtml
+++ b/Pages/Shared/_Camera.cshtml
@@ -8,6 +8,6 @@
         </div>
     </div>
     <div class="row">
-        <div id="camera-container" class="border-dark"></div>
+        <div id="camera-container" class="border border-danger"></div>
     </div>
 </div>
